# SiteExtractor

./: .env.example  .gitignore  CLEANUP_COMPLETE.md  CODE_OF_CONDUCT.md  CONFIRMATION_PAGE_README.md  CONTRIBUTING.md  EXTRACTION_SYSTEM_DOCUMENTATION.md  IMPLEMENTATION_COMPLETE.md  JAVASCRIPT_SPA_LIMITATION.md  LICENSE  PLAYWRIGHT_INTEGRATION_COMPLETE.md  PLAYWRIGHT_SETUP.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RECENT_IMPROVEMENTS.md  SECURITY.md  SUCCESS_WINDOWS.md  VALIDATION_ENHANCEMENTS.md  WINDOWS_QUICKSTART.md  docker-compose.yml  env.example  example_usage.py  examples  load-paragraphs.js  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  start-backend.sh  start-confirmation-app.bat  start-confirmation-app.sh  start-fedora.sh  start-frontend.sh  start-workflow.bat  start-workflow.sh  test_header_extraction.py  test_northshore.py  truth-extractor.bat  tsconfig.base.json
backend/: README.md  app.py  pyproject.toml  requirements.txt
config/: extractor.config.yaml
docs/: CLEANUP_COMPLETE.md  DESKTOP_APP_READY.md  MONOREPO_MIGRATION.md  PLAYWRIGHT_SETUP.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_SITE_GENERATOR.md  SETUP_COMPLETE.md  SUCCESS_WINDOWS.md  USAGE_EXAMPLES.md  WINDOWS_QUICKSTART.md  architecture.md  confirmation-workflow.md  testing.md
extractors/: README.md  assets_extractor.py  contact_extractor.py  image_extractor.py  legal_extractor.py  meta_extractor.py  services_extractor.py  truth_extractor.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: README.md  build.bat  build.sh  (+10 more)
(+287 files in other folders)
